--- a/article_slides.html
+++ b/article_slides.html
@@ -60,7 +60,7 @@
 
     <style type="text/css">code{white-space: pre;}</style>
 
-    <link rel="stylesheet" href="css/extra.css"/>
+    <link rel="stylesheet" href="assets/css/extra.css"/>
 
 <!-- Printing and PDF exports -->
 <script id="paper-css" type="application/dynamic-css">
