Adding article slides

--- a/article_slides.html
+++ b/article_slides.html
@@ -449,7 +449,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <!DOCTYPE html>
   <html>
     <div class="bottombar">
-      <h1 class="title"></h1><image class="logo" src="./img/Rplot2.png" style="position: absolute;right:48px;top:15px; width:5%; height:5%;">
+      <h1 class="title"></h1><image class="logo" src="./assets/img/Rplot2.png" style="position: absolute;right:48px;top:15px; width:5%; height:5%;">
     </div>
   </html>
   <div class="reveal">
