Adding article slides

--- a/article_slides.html
+++ b/article_slides.html
@@ -461,8 +461,8 @@ document.getElementsByTagName('head')[0].appendChild(style);
     <h3 class="date">10 octubre, 2019</h3>
 </section>
 
-<section id="diapositivas" class="slide level2">
-<h2>Diapositivas  <span class="fa fa-cloud-download" style="color:white;"></span></h2>
+<section id="slides" class="slide level2">
+<h2>Slides  <span class="fa fa-cloud-download" style="color:white;"></span></h2>
 <div class="alert alert-info">
 <h5>
 <a href="https://aurora-mareviv.github.io/ProjectR2/article_slides"><code>https://aurora-mareviv.github.io</code></a>
@@ -473,6 +473,28 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <a href="https://aurora-mareviv.github.io/ProjectR2/article_slides"><code>/ProjectR2/article_slides</code></a>
 </h5>
 </div>
+</section>
+<section id="tools" class="slide level2">
+<h2>Tools</h2>
+<ul>
+<li><p>RStudio</p></li>
+<li><p>Zotero</p></li>
+<li><p>MSWord template</p></li>
+</ul>
+</section>
+<section id="method" class="slide level2">
+<h2>Method</h2>
+<ul>
+<li>Content tree in RMarkdown
+<ul>
+<li>Text</li>
+<li>Code</li>
+<li>Tables</li>
+<li>Figures</li>
+</ul></li>
+<li><p>Sections of the article</p></li>
+<li><p>Other formatting</p></li>
+</ul>
 </section>
     </div>
   </div>
