--- a/article_slides.html
+++ b/article_slides.html
@@ -458,56 +458,108 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">How to write a scientific article <br> using Rmarkdown</h1>
     <h2 class="author">Aurora Baluja <br>Servicio Anestesiología. <br>Hospital Clinico de Santiago <br><span class="citation" data-cites="maureviv">@maureviv</span></h2>
-    <h3 class="date">10 Outubro, 2019</h3>
+    <h3 class="date">11 Outubro, 2019</h3>
 </section>
 
-<section id="slides" class="slide level2">
-<h2>Slides  <span class="fa fa-cloud-download" style="color:white;"></span></h2>
+<section id="section" class="slide level2">
+<h2></h2>
+<section data-background-image="./assets/img/library.jpg" data-background-size="100%">
+</section>
 <p><br></p>
-<div class="alert alert-info">
+<div class="alert alert-gray">
 <h3>
+<p>Slides  <span class="fa fa-cloud-download" style="color:white;"></span></p>
 <a href="https://aurora-mareviv.github.io/ProjectR2/article_slides"><code>https://aurora-mareviv.github.io/</code></a>
 </h3>
 </div>
-<div class="alert alert-info">
+<div class="alert alert-gray">
 <h3>
 <a href="https://aurora-mareviv.github.io/ProjectR2/article_slides"><code>/ProjectR2/article_slides</code></a>
 </h3>
 </div>
 </section>
-<section id="reasons-to-do-it-with-rmarkdown" class="slide level2">
-<h2>Reasons to do it with Rmarkdown</h2>
+<section id="section-1" class="slide level2">
+<h2></h2>
+<section data-background-image="./assets/img/library.jpg" data-background-size="100%">
+</section>
+<p><br></p>
+<div class="alert alert-gray">
+<h3>
+<p>Reasons to do it with Rmarkdown</p>
 <ul>
 <li>Reproducibility</li>
 <li><p>Integration</p>
 <ul>
-<li>Code and outputs</li>
+<li>Code and inline outputs</li>
+<li>Dynamic external file creation</li>
 <li>Bibliography</li>
 </ul></li>
 <li><p>Simple, stable tools</p></li>
 </ul>
+</h3>
+</div>
 </section>
-<section id="tools" class="slide level2">
-<h2>Tools</h2>
+<section id="section-2" class="slide level2">
+<h2></h2>
+<section data-background-image="./assets/img/lego2.jpg" data-background-size="100%">
+</section>
+<p><br></p>
+<div class="alert alert-gray">
+<h3>
+<p>Tools</p>
 <ul>
 <li>RStudio</li>
 <li>Zotero</li>
 <li>MSWord template</li>
 </ul>
+<div class="img-center">
+<p><img class="plain" style="width:600px;" src="./assets/img/tools.png"></p>
+</div>
+</h3>
+</div>
 </section>
-<section id="method" class="slide level2">
-<h2>Method</h2>
+<section id="section-3" class="slide level2">
+<h2></h2>
+<section data-background-image="./assets/img/books.jpg" data-background-size="100%">
+</section>
+<p><br></p>
+<div class="alert alert-gray">
+<h2>
 <ul>
-<li>Content tree in RMarkdown
+<li><p>Content tree in RMarkdown</p>
 <ul>
-<li>Text</li>
-<li>Code</li>
+<li>YAML heading</li>
+<li>Article cover pages</li>
+<li>Code (&amp; external file creation)</li>
+<li>Text (&amp; inline output)</li>
 <li>Tables</li>
 <li>Figures</li>
 </ul></li>
-<li><p>Sections of the article</p></li>
-<li><p>Other formatting</p></li>
 </ul>
+</h2>
+</div>
+</section>
+<section id="section-4" class="slide level2">
+<h2></h2>
+<section data-background-image="./assets/img/code.jpg" data-background-size="100%">
+</section>
+<p><br></p>
+<div class="alert alert-gray">
+<h2>
+<ul>
+<li><p>Sections of the article</p>
+<ul>
+<li>Abstract</li>
+<li>Background</li>
+<li>Methods</li>
+<li>Results</li>
+<li>Discussion (&amp; Conclusion)</li>
+<li>Tables, Figures</li>
+</ul></li>
+</ul>
+</h2>
+</div>
+<!-- - Other formatting -->
 </section>
     </div>
   </div>
