update notebook for BioSS seminar

--- a/article_slides.html
+++ b/article_slides.html
@@ -477,6 +477,18 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <a href="https://aurora-mareviv.github.io/ProjectR2/article_slides"><code>/ProjectR2/article_slides</code></a>
 </h3>
 </div>
+<p><br></p>
+<div class="alert alert-gray">
+<h3>
+<p>Clone repo  <span class="fa fa-cloud-download" style="color:white;"></span></p>
+<a href="#/"><code>git clone https://github.com/</code></a>
+</h3>
+</div>
+<div class="alert alert-gray">
+<h3>
+<a href="#/"><code>/aurora-mareviv/ProjectR2</code></a>
+</h3>
+</div>
 </section>
 <section id="section-1" class="slide level2">
 <h2></h2>
